estilo pagina manuales y cambios en menu navegacion

--- a/paginas/Manuales.html
+++ b/paginas/Manuales.html
@@ -27,9 +27,7 @@
                 <li class="nav-item">
                   <a class="nav-link text-primary fs-5" aria-current="page" href="../index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link text-primary fs-5" href="./Contacto.html">Contacto</a>
-                </li>
+                
                 <li class="nav-item">
                   <a class="nav-link text-primary fs-5" href="./Catalogo.html">Catalogo</a>
                 </li>
@@ -42,26 +40,68 @@
                 <li class="nav-item">
                   <a class="nav-link text-primary fs-5" href="./Manuales.html">Manuales</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary fs-5" href="./Contacto.html">Contacto</a>
+                </li>
               </ul>
             </div>
           </div>
         </nav>
     </header>
 
-    <section>
-        <a href="https://www.datakom.com.tr/dkg-207-automatic-mains-failure-unit/65/103/ProductDetails?lang=5" target="_blank"> Manual 207
-            <img src="../imagenes/207.jpg" alt="centralita 207">
-        </a>
-
-        <a href="https://www.datakom.com.tr/dkg-317-canmpu-manual-and-remote-start-unit/68/73/ProductDetails?lang=5" target="_blank"> Manual 317
-            <img src="../imagenes/317.jpg" alt="centralita 317">
-        </a>
-
-        <a href="https://www.datakom.com.tr/dkg-307-canmpu-automatic-mains-failure-unit/68/78/ProductDetails?lang=5" target="_blank"> Manual 307
-            <img src="../imagenes/307.jpg" alt="centralita 307">
-        </a>
-
+    <section id="descripDePagina">
+      <h2>Manuales de Controladores</h2>
+      <p>
+        En esta seccion encontrara los manuales del controlador de su equipo en cual encontrara informacion de instalacion y operacion de para el usuario.
+        La identenficaion del controlador se encuentra en la esquina superior derecha.    
+      </p>
     </section>
+
+    <main class="main-manuales">
+      <section>
+        <div>
+          <h3>Controlador DKG-207</h3>
+          <a href="https://www.datakom.com.tr/dkg-207-automatic-mains-failure-unit/65/103/ProductDetails?lang=5" target="_blank"> 
+            <img src="../imagenes/controlador DKG-207.png" alt="controlador DKG-207">
+          </a>
+        </div>
+
+        <div>
+          <h3>Controlador DKG-317</h3>
+          <a href="https://www.datakom.com.tr/dkg-317-canmpu-manual-and-remote-start-unit/68/73/ProductDetails?lang=5" target="_blank"> 
+            <img src="../imagenes/controlador DKG-317.png" alt="controlador DKG-317">
+          </a>
+        </div>
+
+        <div>
+          <h3>Controlador DKG-307</h3>
+          <a href="https://www.datakom.com.tr/dkg-307-canmpu-automatic-mains-failure-unit/68/78/ProductDetails?lang=5" target="_blank"> 
+            <img src="../imagenes/controlador DKG-307.png" alt="controlador DKG-307">
+          </a>
+        </div>
+
+        <div>
+          <h3>Controlador D-200</h3>
+          <a href="https://www.datakom.com.tr/d200-mk3-genset-controller/491/255/ProductDetails?lang=5" target="_blank">
+            <img src="../imagenes/controlador D-200.png" alt="controlador D-200">
+          </a>
+        </div>
+
+        <div>
+          <h3>Controlador D-500</h3>
+          <a href="https://www.datakom.com.tr/d-500-advanced-genset-controller/74/55/ProductDetails?lang=5" target="_blank">
+            <img src="../imagenes/controlador D-500.png" alt="controlador D-500">
+          </a>
+        </div>
+
+        <div>
+          <h3>Controlador D-700</h3>
+          <a href="https://www.datakom.com.tr/d-700-advanced-genset-synchronization-controller/68/136/ProductDetails?lang=5" target="_blank">
+            <img src="../imagenes/controlador D-700.png" alt="controlador D-700">
+          </a>
+        </div>
+      </section>
+    </main>
 
     <footer>
         <a href="https://es-la.facebook.com/" target="_blank">
