agregado de meta decriptions

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <!--estilos-->
     <link rel="stylesheet" href="./estilos/estilos.css">
     <link rel="stylesheet" href="./sass/main.css">
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Home</title>
+    <!--tags SEO-->
+    <title>Home | Grupos electrogenos</title>
+    <meta name="description" content="Fabrica de grupos electrogenos, servicios de mantenimiento, alquiler, manuales, ¡Encontra el grupo electrogeno que buscas!">
+    <meta name="keywords" content="Grupos electrogenos">
 </head>
 
 <body>
@@ -76,7 +82,7 @@
     <section id="descripDePagina">
         <h2>Sobre nosotros</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi incidunt neque dolorem quos vel reiciendis, ratione nemo porro, enim, ut excepturi temporibus rerum iusto deleniti soluta repellendus modi unde fuga?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium praesentium consequuntur mollitia error, corrupti ipsam? Ea tempore recusandae debitis tenetur corporis necessitatibus delectus laboriosam consequatur doloribus. Quos perspiciatis harum sit!
+           Somos una empresa dedicada a la fabricacion instalacion y reapacion de grupos electrogenos, trabajamos con materiales de primera calidad y con contamos con personal capacitado brindando un servicio de calidad para cubriri la necesidades de cada cliente.
         </p>
     </section>
 
