--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--estilos-->
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../sass/main.css">
+    <!--tags SEO-->
     <title>Contacto</title>
+    <meta name="description" content="Comunicate con Grupos electrogenos">
+    <meta name="keywords" content="Contacto">
 </head>
 
 <body>
-
     <header>
         <h1 id="nombrefabrica">Grupos electrogenos</h1>
 
