--- a/paginas/Servicios.html
+++ b/paginas/Servicios.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--estilos-->
     <link rel="stylesheet" href="../sass/main.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <!--tags SEO-->
     <title>Servicios</title>
+    <meta name="description" content="Servicios de mantenimiento y abono">
+    <meta name="keywords" content="mantenimiento, abono">
 </head>
 
 <body>
@@ -54,8 +60,9 @@
         <section>
             <h2>Mantenimiento</h2> 
             <div>               
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, facere quod? Iste at modi fugit perferendis obcaecati repellat laborum. Eveniet non modi ad totam dolor labore voluptatem consequatur culpa hic.</p>
-           
+                <p>
+                  Este servicio es para relizar los mantenimiento periodico establecido porel fabricante del motor, este mantenimiento realizado en tiempo y forma sirbe para alargar la vida util de su equipo.
+                </p>
                 <div>
                   <img src="../imagenes/mantenimiento-1.jpeg" alt="">
                 </div>
@@ -66,8 +73,9 @@
         <section>
             <h2>Abono</h2>  
             <div>        
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam officia atque cum recusandae hic cupiditate culpa, quia labore nihil, quidem voluptate repudiandae nisi nostrum expedita iste inventore minus! Ipsam, magnam.</p>
-    
+                <p>
+                  Al contratar el servio de abono se le relizara al equipo visitas periodicas por personal capcitado para controlar parametros de funcionamiento y se verificara el correcto funcionamiento del equipo sin que usted tenga que disponer d propio personal.
+                </p>
                 <div>
                     <img src="../imagenes/abono-1.jpg" alt="">
                 </div>    
