--- a/paginas/Catalogo.html
+++ b/paginas/Catalogo.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!--estilos-->
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../sass/main.css">
+    <!--tags SEO-->
     <title>Catalogo</title>
+    <meta name="description" content="Encontra el grupo electrogeno de fabricaion nacional que se adapte a tus nesecidades">
+    <meta name="keywords" content="Grupos electrogenos nuevos">
 </head>
 
 <body>
